--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build --prod",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
