--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@hapi/joi": "^17.1.1",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
