--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^6.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
